--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ packaging==24.2
 pluggy==1.5.0
 pytest==8.3.3
 simpy==4.1.1
+
+lifelines==0.29.2
+pandas==2.0.3
+scikit-learn==1.3.0
+matplotlib==3.7.2
+h5py==3.9.0
+
+# For GPU acceleration (choose the appropriate version based on your CUDA toolkit)
+cupy-cuda11x==12.2.0
